--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,15 @@
       <i class="bz-icn bz-icn-close-outline"></i>
     </div>
     <div class="bz-modal__header">
-      <i class="bz-icn bz-modal__header__icon"></i>
+      <i class="bz-icn bz-modal__header__icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20" style="float: right">
+          <path d="M8.7 8l6.1-6.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0L8 7.3 1.9 1.1c-.2-.1-.6-.1-.8 0-.2.1-.1.6 0 .8L7.3 8l-6.1 6.1c-.2.2-.2.5 0 .7 0 .2.2.2.3.2.1 0 .3 0 .4-.1L8 8.7l6.1 6.1c.1.1.2.1.4.1s.3 0 .4-.1c.2-.2.2-.5 0-.7L8.7 8z"/>
+        </svg>
+      </i>
       {{ title }}
     </div>
     <div class="bz-modal__body">
       <ng-content></ng-content>
-      <slot></slot>
     </div>
     <div class="bz-modal__footer">
       <button class="bz-modal__button bz-btn">
