--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,24 @@
 <div *ngIf="active" class="bz-modal bs-effect-opacity">
   <div class="bz-modal__container">
     <div class="bz-modal__close" (click)="onClose()">
-      <i class="bz-icn bz-icn-close-outline"></i>
-    </div>
-    <div class="bz-modal__header">
-      <i class="bz-icn bz-modal__header__icon">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20" style="float: right">
-          <path d="M8.7 8l6.1-6.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0L8 7.3 1.9 1.1c-.2-.1-.6-.1-.8 0-.2.1-.1.6 0 .8L7.3 8l-6.1 6.1c-.2.2-.2.5 0 .7 0 .2.2.2.3.2.1 0 .3 0 .4-.1L8 8.7l6.1 6.1c.1.1.2.1.4.1s.3 0 .4-.1c.2-.2.2-.5 0-.7L8.7 8z"/>
+      <i class="bz-icn bz-icn-close-outline">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20">
+          <path d="M8.7 8l6.1-6.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0L8 7.3 1.9 1.1c-.2-.1-.6-.1-.8 0-.2.1-.1.6 0 .8L7.3 8l-6.1 6.1c-.2.2-.2.5 0 .7 0 .2.2.2.3.2.1 0 .3 0 .4-.1L8 8.7l6.1 6.1c.1.1.2.1.4.1s.3 0 .4-.1c.2-.2.2-.5 0-.7L8.7 8z" />
         </svg>
       </i>
+    </div>
+    <div class="bz-modal__header">
       {{ title }}
     </div>
     <div class="bz-modal__body">
       <ng-content></ng-content>
     </div>
     <div class="bz-modal__footer">
-      <button class="bz-modal__button bz-btn">
-        <span>{{ acceptButtonText }}</span>
+      <button *ngIf="acceptText" class="bz-modal__button bz-modal__button_accept bz-btn">
+        <span>{{ acceptText }}</span>
+      </button>
+      <button *ngIf="cancelText" class="bz-modal__button bz-modal__button_cancel bz-btn">
+        <span>{{ cancelText }}</span>
       </button>
     </div>
   </div>
