--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -207,7 +207,7 @@ body {
 
 .bz-modal__close {
   cursor: pointer;
-  padding: 1.6rem;
+  padding: 16px;
   position: absolute;
   right: 0;
   top: 0;
@@ -218,9 +218,9 @@ body {
   border-bottom: 1px solid #e6e8eb;
   border-radius: 8px 8px 0 0;
   color: #05131e;
-  font-size: 1.6rem;
+  font-size: 16px;
   font-weight: 600;
-  padding: 1.6rem;
+  padding: 16px;
 }
 
 .bz-modal__header__icon {
@@ -240,9 +240,10 @@ body {
   color: #05131e;
   font-size: 1.4rem;
   overflow-y: auto;
-  padding: 3.2rem;
+  padding: 32px;
   position: relative;
   text-align: center;
+  font-size: 12px;
 }
 
 .bz-modal__footer {
@@ -260,14 +261,13 @@ body {
   background-color: #f6f6f6;
 }
 
-
 .bz-modal__button {  
   border: 1px solid transparent;
   border-radius: 4px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.06), 0 2px 2px rgba(0, 0, 0, 0.12);
   color: #fff;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 14px;
   white-space: nowrap;
   font-weight: 400;
   font-style: normal;
